applications/flask-api/3-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: 12-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      serviceAccountName: myapp
      containers:
        - name: myapp
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
