applications/flask-api/5-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      serviceAccountName: flask-app
      containers:
        - name: flask-app
          image: nabeelaccount/fask-api-sqlalchemy:latest
          ports:
            - containerPort: 5000
